--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.48</version>
+            <version>8.0.26</version>
         </dependency>
-
 
 <!--        websocket依赖-->
         <dependency>
@@ -155,7 +154,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.example.DemoApplication</mainClass>
-                    <skip>true</skip>
+<!--                    <skip>true</skip>-->
                 </configuration>
                 <executions>
                     <execution>
